Closed Bug 1429982 Opened 8 years ago Closed 8 years ago

.cloneNode on ShadowRoot interface should throw NotSupportedError

Categories

(Core :: DOM: Core & HTML, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla59
Tracking Status
firefox59 --- fixed

People

(Reporter: jessica, Assigned: jessica)

References

Details

Attachments

(1 file)

The spec changed in order to align with the error thrown by importNode. https://github.com/w3c/webcomponents/issues/393
Priority: -- → P3
Attached patch patch, v1. — — Splinter Review
Assignee: nobody → jjong
Attachment #8942072 - Flags: review?(bugs)
Attachment #8942072 - Flags: review?(bugs) → review+
Pushed by jjong@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/b584c2d1fb90 cloneNode on ShadowRoot interface should throw NotSupportedError. r=smaug
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: