Bug 1429982 - cloneNode on ShadowRoot interface should throw NotSupportedError. r=smaug

The spec changed in order to align with the error thrown by importNode.